<resources>
    <string name="app_name">Ligue Político</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="about_name">Acerca</string>

    <string name="lbl_document">Documento</string>

    <string name="action_diputados">Diputados</string>
    <string name="action_gobernadores">Gobernadores</string>
    <string name="action_refresh">Actualizar ubicación</string>

    <string name="location_permission_request">Se necesitan permisos de ubicación para mostrate contenido cerca de ti.</string>

    <string name="no_location_services_content">Servicios de ubicación desactivados</string>
    <string name="no_location_services_sub_content">Debes permitirle a la aplicación acceder\na tu ubicación para funcionar</string>
    <string name="no_location_services_action">Aceptar</string>

    <string name="no_permissions_services_content">Permisos de ubicación no otorgados</string>
    <string name="no_permissions_services_sub_content">Utilizamos la ubicación geográfica de tu dispositivo móvil para obtener los candidatos que te corresponden de acuerdo a tu entidad.</string>
    <string name="no_permissions_services_action">Otorgar permisos</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="drawer_header_liguepolitico">¿Más información de Ligue Político?</string>
    <string name="drawer_header_liguepolitico_website">http://www.liguepolitico.com/</string>

    <string name="drawer_header_factico">¿Qué es Fáctico?</string>
    <string name="drawer_header_factico_website">http://www.factico.com.mx</string>

    <string name="getting_city">Obteniendo dirección donde te encuentras</string>
    <string name="getting_location">Obteniendo ubicación</string>
    <string name="getting_info">Obteniendo información de candidatos</string>

    <string name="no_gps_enabled">Servicios de ubicación apagados. Inténtalo de nuevo.</string>

    <!-- Twitter -->
    <string name="tweet_message_good">¿Te atrajo este candidat@? Mándale un mensaje en Twitter preguntándole cuál sería su propuesta para acabar con la corrupción en México.</string>
    <string name="tweet_message_bad">¿Te atrajo este candidat@? Mándale un mensaje en Twitter preguntándole cuál sería su propuesta para acabar con la corrupción en México.</string>

    <string name="tweet_submessage_good">¡Mándale un mensaje!</string>
    <string name="tweet_submessage_bad">¡Mándale un mensaje!</string>

    <string name="tweet_first_message_good">.%1$s, te encontré en Ligue Político, y quiero saber qué propones para acabar con la corrupción en nuestro país. ¿Qué dices?</string>
    <string name="tweet_first_message_bad">.%1$s, te encontré en Ligue Político, y quiero saber qué propones para acabar con la corrupción en nuestro país. ¿Qué dices?</string>

    <string name="no_internet_connection">Sin conexión a Internet.\nInténtalo de nuevo.</string>

    <string name="error_message_default">Algo salió mal.\nInténtalo de nuevo.</string>

    <string name="about_text">Con Ligue Político podrás conocer quiénes son tus candidatos a puestos de elección popular, de acuerdo a tu ubicación geográfica, para exigirles que se comprometan con la transparencia y la rendición de cuentas.\n\nSi un candidato te atrae, desliza a la derecha.\n\nEs una iniciativa ciudadana, abierta y colaborativa, desarrollada por Fáctico y apoyada por Opciona.</string>
    <string name="about_link">Para más información visita el\nsitio web aquí</string>

    <string name="no_more_candidates">Ya no hay más candidatos que mostrar. Presiona el botón \"actualizar\" en la esquina superior derecha para volver a jugar.</string>

    <string name="button_start_label">Iniciar</string>

    <!-- Tutorial -->
    <string name="tutorial_title_1">¡Conoce a tus candidatos!</string>
    <string name="tutorial_title_2">Aliados</string>
    <string name="tutorial_title_3">Comienza</string>
    <string name="tutorial_message_1">Con Ligue Político podrás conocer quiénes son tus candidatos a puestos de elección popular, de acuerdo a tu ubicación geográfica, para exigirles que se comprometan con la transparencia y la rendición de cuentas.</string>
    <string name="tutorial_message_2">Es una iniciativa ciudadana, abierta, colaborativa y regional</string>
    <string name="tutorial_message_3">Si un candidato te atrae, desliza a la derecha. ¡Pero ojo! Antes de darle tu voto, pregúntale cómo piensa combatir la corrupción</string>
</resources>
