<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_diputados"
        android:orderInCategory="100"
        android:title="@string/action_diputados"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gobernadores"
        android:orderInCategory="100"
        android:title="@string/action_gobernadores"
        app:showAsAction="never" />
</menu>
