<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDeepLavender">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/no_location.content_container">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/img_no_location" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/no_location.content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_heightPercent="40%">

        <mx.com.factico.diputinder.views.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_location_services_content"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:typeface="Gotham_Rounded_Bold" />

        <mx.com.factico.diputinder.views.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/no_location_services_sub_content"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:typeface="Gotham_Rounded_Book" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="2dp">

            <mx.com.factico.diputinder.views.CustomTextView
                android:id="@+id/no_location.ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_green"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:text="@string/no_location_services_action"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                app:typeface="Gotham_Rounded_Bold" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.percent.PercentRelativeLayout>